--- a/document/root.tex
+++ b/document/root.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 
-\title{Real-Time Deque}
+\title{Real-Time Double-Ended Queue}
 \author{Balazs Toth and Tobias Nipkow\\Technical University of Munich}
 \maketitle
 
